# wagtail-vector-index

./: .coverage.TBX219.local.55777.011627  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE_LANGCHAIN  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: devcontainer.json  docker-compose.yml
.github/scripts/: report_nightly_build_failure.py
.github/workflows/: publish.yml  test.yml
docs/: .pages  ai-backends.md  architecture.md  backends.md  contributing.md  index.md  indexes.md  installation.md  quick-start.md  storage-providers.md  using-indexes.md  vector-backends.md  vector-indexes.md
docs/ai-backends/: index.md  litellm.md  llm.md
src/wagtail_vector_index/: __init__.py  ai.py  apps.py  base.py  consumers.py  models.py  signals.py  utils.py
src/wagtail_vector_index/ai_utils/: embeddings.py  tokens.py  types.py
src/wagtail_vector_index/ai_utils/backends/: __init__.py  base.py  echo.py  litellm.py  llm.py
src/wagtail_vector_index/ai_utils/text_splitting/: dummy.py  langchain.py
src/wagtail_vector_index/backends/: __init__.py  base.py
src/wagtail_vector_index/backends/numpy/: __init__.py  backend.py
src/wagtail_vector_index/backends/pgvector/: apps.py  backend.py  models.py
src/wagtail_vector_index/backends/pgvector/migrations/: 0002_initial.py  0003_pgvectorembedding_embedding_output_dimensions.py  0004_populate_embedding_output_dimensions.py  0005_make_embedding_output_dimensions_not_nullable.py
src/wagtail_vector_index/backends/qdrant/: backend.py
src/wagtail_vector_index/backends/weaviate/: backend.py
src/wagtail_vector_index/index/: __init__.py  base.py  model.py  models.py  registry.py
src/wagtail_vector_index/management/commands/: update_vector_indexes.py
src/wagtail_vector_index/migrations/: 0002_rename_embedding_model.py  0003_adjust_document_fields.py
src/wagtail_vector_index/storage/: __init__.py  base.py  chunking.py  conversion.py  django.py  filters.py  index.py  models.py  registry.py
src/wagtail_vector_index/storage/numpy/: __init__.py  provider.py
src/wagtail_vector_index/storage/pgvector/: __init__.py  apps.py  models.py  provider.py  types.py
src/wagtail_vector_index/storage/pgvector/migrations/: 0001_enable_pgvector_extension.py  0002_initial.py  0003_alter_pgvectorembedding_embedding.py  0004_rename_pgvector_embedding_col.py
src/wagtail_vector_index/storage/qdrant/: __init__.py  provider.py
src/wagtail_vector_index/storage/weaviate/: __init__.py  provider.py
src/wagtail_vector_index/wagtail_ai_utils/: types.py
src/wagtail_vector_index/wagtail_ai_utils/text_splitting/: langchain.py
tests/: async_factory.py  conftest.py  factories.py  test_django_converter.py  test_filters.py  test_index.py  test_model_converter.py  test_model_index.py
tests/test_ai_utils/: test_embeddings.py  test_text_splitting.py  test_tokens.py
tests/test_ai_utils/test_backends/: test_echo.py  test_litellm.py  test_llm.py
tests/test_storage/: test_models.py
tests/testapp/: models.py  settings.py
tests/testapp/fixtures/: books_data.json  films_data.json  games_data.json
tests/testapp/management/commands/: create_test_data.py
tests/testapp/migrations/: 0001_initial.py  0002_examplemodel.py
wagtail_vector_index/: __init__.py  apps.py  models.py
wagtail_vector_index/backends/numpy/: backend.py
wagtail_vector_index/backends/weaviate/: backend.py
wagtail_vector_index/index/: __init__.py  model.py
