[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-vector-index"
authors = [{name = "Tom Usher", email = "tom@tomusher.com"}]
description = "Add your content to vector indexes for fast search and similarity matching."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.0",
    "Wagtail>=4.0",
    "tiktoken>=0.3.3",
    "langchain>=0.0.311",
    "every-ai>=1.1.1"
]
[project.optional-dependencies]
numpy = [
    "numpy>=1.26.0",
]
qdrant = [
    "qdrant-client>=1.6.0",
]
weaviate = [
    "weaviate-client>=3.24.2",
]
testing = [
    "dj-database-url==2.1.0",
    "pre-commit>=3.4.0",
    "pytest>=7.4.2",
    "pytest-django>=4.5.2",
    "wagtail-factories>=4.1.0",
    "factory-boy>=3.3.0"
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.5",
    "mkdocs-awesome-pages-plugin>=2.9.2"
]

[project.urls]
Home = "https://github.com/tomusher/wagtail-vector-index"

[tool.ruff]
select = ["F", "E", "C90", "I", "B", "DJ", "RUF", "TRY", "C4"]
ignore = ["TRY003", "E501", "RUF012"]

[tool.flit.module]
name = "wagtail_vector_index"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testapp.settings"
pythonpath = ["./", "./tests"]

[tool.flit.sdist]
include = [
    "wagtail_vector_index/static"
]
exclude = [
    "wagtail_vector_index/static_src",
    "wagtail_vector_index/test",
    "wagtail_vector_index/static/wagtail_vector_index/js/.gitignore",
    "tests",
    "testmanage.py",
    ".*",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml"
]
